pkgs/drbd9/drbd/.compat_test.6.1.26/have_blk_qc_t_make_request.stderr
<command-line>: warning: "KBUILD_MODNAME" redefined
<command-line>: note: this is the location of the previous definition
In file included from <command-line>:
/home/hernad/nix/kernel/build-drbd/drbd/drbd-kernel-compat/tests/have_blk_qc_t_make_request.c: In function ‘foo’:
/home/hernad/nix/kernel/build-drbd/drbd/drbd-kernel-compat/tests/have_blk_qc_t_make_request.c:23:55: error: ‘make_request_fn’ undeclared (first use in this function)
   23 |         BUILD_BUG_ON(!(__same_type(drbd_make_request, make_request_fn)));
      |                                                       ^~~~~~~~~~~~~~~
/nix/store/gl0cb943fyppp363vlazvxxv9bfiv70b-linux-6.1.26-dev/lib/modules/6.1.26/source/include/linux/compiler_types.h:337:23: note: in definition of macro ‘__compiletime_assert’
  337 |                 if (!(condition))                                       \
      |                       ^~~~~~~~~
/nix/store/gl0cb943fyppp363vlazvxxv9bfiv70b-linux-6.1.26-dev/lib/modules/6.1.26/source/include/linux/compiler_types.h:357:9: note: in expansion of macro ‘_compiletime_assert’
  357 |         _compiletime_assert(condition, msg, __compiletime_assert_, __COUNTER__)
      |         ^~~~~~~~~~~~~~~~~~~
/nix/store/gl0cb943fyppp363vlazvxxv9bfiv70b-linux-6.1.26-dev/lib/modules/6.1.26/source/include/linux/build_bug.h:39:37: note: in expansion of macro ‘compiletime_assert’
   39 | #define BUILD_BUG_ON_MSG(cond, msg) compiletime_assert(!(cond), msg)
      |                                     ^~~~~~~~~~~~~~~~~~
/nix/store/gl0cb943fyppp363vlazvxxv9bfiv70b-linux-6.1.26-dev/lib/modules/6.1.26/source/include/linux/build_bug.h:50:9: note: in expansion of macro ‘BUILD_BUG_ON_MSG’
   50 |         BUILD_BUG_ON_MSG(condition, "BUILD_BUG_ON failed: " #condition)
      |         ^~~~~~~~~~~~~~~~
/home/hernad/nix/kernel/build-drbd/drbd/drbd-kernel-compat/tests/have_blk_qc_t_make_request.c:23:9: note: in expansion of macro ‘BUILD_BUG_ON’
   23 |         BUILD_BUG_ON(!(__same_type(drbd_make_request, make_request_fn)));
      |         ^~~~~~~~~~~~
/home/hernad/nix/kernel/build-drbd/drbd/drbd-kernel-compat/tests/have_blk_qc_t_make_request.c:23:24: note: in expansion of macro ‘__same_type’
   23 |         BUILD_BUG_ON(!(__same_type(drbd_make_request, make_request_fn)));
      |                        ^~~~~~~~~~~
/home/hernad/nix/kernel/build-drbd/drbd/drbd-kernel-compat/tests/have_blk_qc_t_make_request.c:23:55: note: each undeclared identifier is reported only once for each function it appears in
   23 |         BUILD_BUG_ON(!(__same_type(drbd_make_request, make_request_fn)));
      |                                                       ^~~~~~~~~~~~~~~
/nix/store/gl0cb943fyppp363vlazvxxv9bfiv70b-linux-6.1.26-dev/lib/modules/6.1.26/source/include/linux/compiler_types.h:337:23: note: in definition of macro ‘__compiletime_assert’
  337 |                 if (!(condition))                                       \
      |                       ^~~~~~~~~
/nix/store/gl0cb943fyppp363vlazvxxv9bfiv70b-linux-6.1.26-dev/lib/modules/6.1.26/source/include/linux/compiler_types.h:357:9: note: in expansion of macro ‘_compiletime_assert’
  357 |         _compiletime_assert(condition, msg, __compiletime_assert_, __COUNTER__)
      |         ^~~~~~~~~~~~~~~~~~~
/nix/store/gl0cb943fyppp363vlazvxxv9bfiv70b-linux-6.1.26-dev/lib/modules/6.1.26/source/include/linux/build_bug.h:39:37: note: in expansion of macro ‘compiletime_assert’
   39 | #define BUILD_BUG_ON_MSG(cond, msg) compiletime_assert(!(cond), msg)
      |                                     ^~~~~~~~~~~~~~~~~~
/nix/store/gl0cb943fyppp363vlazvxxv9bfiv70b-linux-6.1.26-dev/lib/modules/6.1.26/source/include/linux/build_bug.h:50:9: note: in expansion of macro ‘BUILD_BUG_ON_MSG’
   50 |         BUILD_BUG_ON_MSG(condition, "BUILD_BUG_ON failed: " #condition)
      |         ^~~~~~~~~~~~~~~~
/home/hernad/nix/kernel/build-drbd/drbd/drbd-kernel-compat/tests/have_blk_qc_t_make_request.c:23:9: note: in expansion of macro ‘BUILD_BUG_ON’
   23 |         BUILD_BUG_ON(!(__same_type(drbd_make_request, make_request_fn)));
      |         ^~~~~~~~~~~~
/home/hernad/nix/kernel/build-drbd/drbd/drbd-kernel-compat/tests/have_blk_qc_t_make_request.c:23:24: note: in expansion of macro ‘__same_type’
   23 |         BUILD_BUG_ON(!(__same_type(drbd_make_request, make_request_fn)));
      |                        ^~~~~~~~~~~
